# CHIP

./: README.md
data/: AT2x2.txt  AT2x3.txt  AT2x5.txt  AT3x2.txt  BT2x2.txt  BT2x5.txt  BT3x2.txt  G2x2.txt  G2x3.txt  G2x5.txt  G3x2.txt
examples/: 10_vgg16.cpp  13_resnet18.cpp  1_encrypt-decrypt.cpp  2_evalpoly.cpp  3_average.cpp  4_save-load.cpp  5_bootstrap.cpp  6_bootstrap_gpu.cpp  8_resnet.cpp  9_vgg11.cpp  CMakeLists.txt  HEaaNTimer.hpp  conv.hpp  examples.hpp  utils.cc
model/: .gitattributes  c100_vgg16_7055.h5  c10_r18_9528.h5  c10_rn20_9264.h5  c10_rn32_9218.h5  c10_vgg11_8959.h5  input_c10.h5  input_c100.h5
